--- a/intro/package.json
+++ b/intro/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "country-list": "^2.4.1",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.8.2",
+    "react-select": "^5.10.2",
+    "react-select-country-list": "^2.2.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
